feat: add `evalspace` and evals

--- a/evals/package.json
+++ b/evals/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "evalspace": "0.0.0-beta.0",
     "tsx": "^4.0.0",
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
